# ACARS_PHPVMS7

./: .gitignore  README.md  index.html  package-lock.json  package.json  tauri-update-key-nopass.key  tauri-update-key-nopass.key.pub  tauri-update-key-real.key  tauri-update-key-real.key.pub
.github/workflows/: release.yml
src/: App.css  App.tsx  main.tsx  stratos.css  theme.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/crates/api-client/: Cargo.toml
src-tauri/crates/secrets/: Cargo.toml
src-tauri/crates/secrets/src/: lib.rs
src-tauri/crates/sim-msfs/: build.rs
src-tauri/icons/: icon.icns
src-tauri/src/: accident.rs  discord_rpc.rs  lib.rs  main.rs  runway.rs  runway_assessment.rs  sentry_init.rs  touchdown_v2.rs  xplane_plugin_install.rs
src-tauri/tests/: phase_fsm_replay.rs  touchdown_v2_replay.rs
src/components/: AboutPanel.tsx  ActiveFlightPanel.tsx  ApproachStabilityCard.tsx  ApproachStabilityHelpModal.tsx  BidsList.tsx  ErrorReportingFirstRunBanner.tsx  LandingPanel.tsx  LiveMap.tsx  LiveRecordingIndicator.tsx  LoadsheetMonitor.tsx  LoginPage.tsx  ManualFileDialog.tsx  ManualFlightModal.tsx  PilotHeader.tsx  RunwayDiagramV2.tsx  RunwayGlossaryModal.tsx  RunwayUtilizationHelpModal.tsx  SettingsPanel.tsx  SinkrateForensik.test.tsx  SinkrateForensik.tsx  SkinContext.tsx  UpdateButton.test.tsx  UpdateButton.tsx  XPlanePremiumPanel.tsx  runwayV2Skin.ts
src/dev/: RunwayDiagramPreview.tsx  mockLandingRecords.ts
src/hooks/: useUpdateChecker.ts
src/i18n/: index.ts
src/lib/: landingScoring.ts  refreshErrorFormatter.ts  sentry.ts
(+34 files in other folders)
