[package]
name = "secrets"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "File-based secrets storage for ASA-ACARS (phpVMS API key, MQTT creds)"

[dependencies]
# v0.7.13: keyring-Dep entfernt. Die einmalige v0.5.15-Migration ist
# 30+ Releases her. File-based Secrets-Storage ist die einzige Wahrheit.
# Audit Q4-2026-05 (CC1).
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true

[lints]
workspace = true
